--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body {
   justify-content: center;
   align-items: center;
   font-family: 'Quicksand', sans-serif;
+    transition: all 0.4s ease;
 }
 
 .card {
@@ -87,4 +88,5 @@ button {
 
 #yes {
   transition: transform 0.4s ease;
+
 
